--- a/dockerfile/centos7/python37/centos/Dockerfile
+++ b/dockerfile/centos7/python37/centos/Dockerfile
@@ -21,9 +21,10 @@ RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime &&\
     git unzip python python-devel python-pip net-tools cronie gcc mysql-devel nginx &&\
     yum -y localinstall /tmp/Resources/python37/*.rpm &&ln -s /usr/bin/python37 /usr/bin/python3 &&\
     curl https://bootstrap.pypa.io/get-pip.py -o /tmp/Resources/get-pip.py && python3 /tmp/Resources/get-pip.py &&\
-    pip3 install virtualenv && virtualenv --no-site-packages /root/env && yum clean all &&  rm -fr /tmp/Resources
+    pip3 install virtualenv && virtualenv --no-site-packages /root/env && \
+    systemctl enable zabbix-agent.service && yum clean all &&  rm -fr /tmp/Resources
 
-
+EXPOSE 10050
 VOLUME ["/sys/fs/cgroup"]
 
 CMD ["/usr/sbin/init"]
