--- a/dockerfile/jenkins_agent/jenkins-xroute-xfront/centos/Dockerfile
+++ b/dockerfile/jenkins_agent/jenkins-xroute-xfront/centos/Dockerfile
@@ -6,23 +6,26 @@ ARG user=root
 ARG group=root
 ARG uid=0
 ARG gid=0
+ARG jenkins_home=/data/jenkins
 
 COPY resource /tmp/resource
 ### SET ENVIRONNEMENT
 ENV LANG=zh_CN.UTF-8 \
     LANGUAGE=zh_CN.UTF-8 \
     TIME_ZONE=Asia/Shanghai \
-    JENKINS_HOME=/root \
+    JENKINS_HOME=${jenkins_home} \
     TINI_VERSION=0.14.0 \
     INI_SHA=6c41ec7d33e857d4779f14d9c74924cab0c7973485d2972419a3b7c7620ff5fd \
-    PATH=$PATH:${MAVEN_HOME}/bin
+    #MAVEN_HOME=
+    #PATH=$PATH:${MAVEN_HOME}/bin \
+    RPM_TOP_DIR=${jenkins_home}
 
 # Install language pack
 RUN localedef -v -c -i en_US -f UTF-8 zh_CN.UTF-8 >/dev/null 2>&1 &&\
     ln -nfs  /usr/share/zoneinfo/Asia/Shanghai /etc/localtime &&\
     grep -q 'zh_CN.utf8' /etc/locale.conf || sed -i -E 's/^LANG=.*/LANG="zh_CN.UTF-8"/' /etc/locale.conf &&\
     yum -y install http://rpms.famillecollet.com/enterprise/remi-release-7.rpm &&\
-    yum install -y ntp yum-plugin-fastestmirror vim-enhanced ntp wget bash-completion elinks lrzsz unix2dos dos2unix git unzip net-tools cronie &&\
+    yum install -y ntp yum-plugin-fastestmirror vim-enhanced ntp wget bash-completion elinks lrzsz unix2dos dos2unix git unzip net-tools cronie lua-devel &&\
     yum install -y gcc-c++ make python python-devel python-pip python36 python36-devel python36-setuptools java-1.8.0-openjdk java-1.8.0-openjdk-devel sudo &&\
     yum install -y centos-release-scl &&\
     yum install -y devtoolset-7-gcc* &&\
@@ -36,7 +39,9 @@ RUN localedef -v -c -i en_US -f UTF-8 zh_CN.UTF-8 >/dev/null 2>&1 &&\
     cp -r /tmp/resource/agent.jar /usr/bin/agent.jar && \
     cp -r /tmp/resource/jenkins.sh /usr/local/bin/jenkins.sh && \
     cd /tmp/resource/3if_dps && yum localinstall -y *.rpm &&\
+    cd /tmp/resource/dev && yum localinstall -y *.rpm &&\
     dos2unix /tmp/resource/*sh &&\
+    echo "sed -i '/^%_topdir/c\%_topdir    "${RPM_TOP_DIR}"/rpmbuild' /usr/lib/rpm/macros"|bash &&\
     chmod +x /usr/bin/agent.jar && chmod +x /usr/local/bin/jenkins.sh && \
     mkdir -p ${JENKINS_HOME}/{build,zipbuild} && \
     mkdir -p ${JENKINS_HOME}/rpmbuld/{BUILD,BUILDROOT,RPMS,SOURCES,SPECS,SRPMS} && \
