--- a/dockerfile/jenkins_agent/jenkins-xroute-xfront/docker-compose.yml
+++ b/dockerfile/jenkins_agent/jenkins-xroute-xfront/docker-compose.yml
@@ -1,19 +1,19 @@
 version: "3"
 services:
-  agent-xone:
-    image: agent:xone1.0.2
-    container_name: agent-xone
+  xroute-xfront:
+    image: xiangys0134/agent:xroute-xfront-v1.0.4
+    container_name: xroute-xfront
     restart: always
     privileged: true
     volumes:
-      - ./jenkins_data/build:/var/lib/jenkins/build
-      - ./jenkins_data/rpmbuild/BUILD:/var/lib/jenkins/rpmbuild/BUILD
-      - ./jenkins_data/rpmbuild/SOURCES:/var/lib/jenkins/rpmbuild/SOURCES
-      - ./jenkins_data/rpmbuild/RPMS:/var/lib/jenkins/rpmbuild/RPMS
-      - ./jenkins_data/rpmbuild/BUILDROOT:/var/lib/jenkins/rpmbuild/BUILDROOT
-      - ./jenkins_data:/var/lib/jenkins
+      - ./jenkins_data/build:/data/jenkins/jenkins/build
+      - ./jenkins_data/rpmbuild/BUILD:/data/jenkins/rpmbuild/BUILD
+      - ./jenkins_data/rpmbuild/SOURCES:/data/jenkins/rpmbuild/SOURCES
+      - ./jenkins_data/rpmbuild/RPMS:/data/jenkins/rpmbuild/RPMS
+      - ./jenkins_data/rpmbuild/BUILDROOT:/data/jenkins/rpmbuild/BUILDROOT
+      - ./jenkins_data:/data/jenkins_home
     environment:
       - JENKINS_USER=jenkins
-      - JENKINS_URL=http://192.168.10.83:8080/computer/node01/slave-agent.jnlp
-      - JENKINS_SECRET=1c6e46fc872d451cfd6f4462ec656b812d08618da368c0d5a6cb9aaef7c52639
-      - JENKINS_AGENT_WORKDIR=/var/lib/jenkins
+      - JENKINS_URL=http://192.168.10.83:8080/computer/node03/slave-agent.jnlp
+      - JENKINS_SECRET=3239d9afe3f6e18fb31625e6be6849a556a46b4cb84c10fe825ccd8fcc917d91
+      - JENKINS_AGENT_WORKDIR=/data/jenkins
