--- a/dockerfile/jenkins_agent/xunce-oms/centos/Dockerfile
+++ b/dockerfile/jenkins_agent/xunce-oms/centos/Dockerfile
@@ -9,7 +9,7 @@ ENV LANG=zh_CN.UTF-8 \
     TIME_ZONE=Asia/Shanghai 
 # Install language pack
 RUN localedef -v -c -i en_US -f UTF-8 zh_CN.UTF-8 >/dev/null 2>&1 &&\
-    ln -nfs  /usr/share/zoneinfo/Asia/Shanghai /etc/localtime &&\
+    rm -rf /etc/localtime && ln -nfs  /usr/share/zoneinfo/Asia/Shanghai /etc/localtime &&\
     grep -q 'zh_CN.utf8' /etc/locale.conf || sed -i -E 's/^LANG=.*/LANG="zh_CN.UTF-8"/' /etc/locale.conf &&\
     yum -y install http://rpms.famillecollet.com/enterprise/remi-release-7.rpm &&\
     yum install -y ntp yum-plugin-fastestmirror vim-enhanced ntp wget bash-completion elinks lrzsz unix2dos dos2unix git unzip net-tools cronie libcurl-devel libxml2-devel &&\
