--- a/dockerfile/jenkins/jenkins-master/docker-compose.yml
+++ b/dockerfile/jenkins/jenkins-master/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - 8080:8080
       - 50000:50000
     volumes:
-      - ./jenkins:/data/jenkins_home
-      - /data/backup/jenkins:/data/jenkins_backup
+      - ./jenkins_data:/data/jenkin
+      - ./jenkins_backup:/data/jenkins_backup
     networks:
       - xunce
 networks:
