--- a/dockerfile/jenkins/jenkins-nodejs/centos/Dockerfile
+++ b/dockerfile/jenkins/jenkins-nodejs/centos/Dockerfile
@@ -2,15 +2,18 @@ FROM centos:centos7.6.1810
 # 镜像的作者 
 LABEL maintainer="<250919938@qq.com>"
 
-ENV JENKINS_HOME /data/jenkins
+ARG http_port=8080
+ARG agent_port=50000
+
 COPY resource /tmp/resource
 ### SET ENVIRONNEMENT
 ENV LANG=zh_CN.UTF-8 \
     LANGUAGE=zh_CN.UTF-8 \
-    TIME_ZONE=Asia/Shanghai 
+    TIME_ZONE=Asia/Shanghai \
+    JENKINS_HOME=/data/jenkins
 # Install language pack
 #RUN localedef -v -c -i en_US -f UTF-8 zh_CN.UTF-8 >/dev/null 2>&1 &&\
-RUN ln -nfs  /usr/share/zoneinfo/Asia/Shanghai /etc/localtime &&\
+RUN rm -rf /etc/localtime && ln -nfs  /usr/share/zoneinfo/Asia/Shanghai /etc/localtime &&\
     #grep -q 'zh_CN.utf8' /etc/locale.conf || sed -i -E 's/^LANG=.*/LANG="zh_CN.UTF-8"/' /etc/locale.conf &&\
     yum -y install http://rpms.famillecollet.com/enterprise/remi-release-7.rpm &&\
     yum install -y ntp yum-plugin-fastestmirror vim-enhanced ntp wget bash-completion elinks lrzsz unix2dos dos2unix git unzip net-tools cronie &&\
@@ -25,7 +28,10 @@ RUN ln -nfs  /usr/share/zoneinfo/Asia/Shanghai /etc/localtime &&\
     yum clean all && rm -fr /tmp/Resources 
 
 
-WORKDIR /data/jenkins
+WORKDIR "${JENKINS_HOME}"
+
+EXPOSE "${http_port}/tcp"
+EXPOSE "${agent_port}/tcp"
 
 
 ENTRYPOINT ["/usr/local/bin/jenkins.sh"]
