--- a/k8s/study/prometheus-data/configmap.yaml
+++ b/k8s/study/prometheus-data/configmap.yaml
@@ -8,6 +8,8 @@ data:
     global:
       scrape_interval:     15s
       evaluation_interval: 15s
+    rule_files:
+      - '/etc/prometheus/rules/*.yaml'
     scrape_configs:
 
     - job_name: 'kubernetes-apiservers'
@@ -154,3 +156,6 @@ data:
       - source_labels: [__meta_kubernetes_pod_name]
         action: replace
         target_label: kubernetes_pod_name
+
+
+
