--- a/k8s/study/prometheus-data/prometheus.yaml
+++ b/k8s/study/prometheus-data/prometheus.yaml
@@ -32,6 +32,8 @@ spec:
           name: data
         - mountPath: "/etc/prometheus"
           name: config-volume
+        - mountPath: "/etc/prometheus/rules"
+          name: rules-volume
         resources:
           requests:
             cpu: 100m
@@ -46,6 +48,9 @@ spec:
       - name: config-volume
         configMap:
           name: prometheus-config      
+      - name: rules-volume
+        configMap:
+          name: prometheus-rules-config      
 ---
 kind: Service
 apiVersion: v1
