--- a/k8s/study/alertmanager/alertmanager-configmap.yaml
+++ b/k8s/study/alertmanager/alertmanager-configmap.yaml
@@ -9,22 +9,26 @@ metadata:
 data:
   alertmanager.yml: |
     global: 
-      resolve_timeout: 5m
-    receivers:
-    - name: webhook
-      webhook_configs:
-      - url: 'http://apollo/hooks/dingtalk/'
-        send_resolved: true
-      - url: 'http://apollo/hooks/prome/'
-        send_resolved: true
+      #resolve_timeout: 5m
+      smtp_smarthost: 'smtp.sina.com:25'
+      smtp_from: 'xiangys_0134@sina.com'
+      smtp_auth_username: 'xiangys_0134@sina.com'
+      smtp_auth_password: 'meiyoumima~!@0'
+      smtp_require_tls: false
     route:
       receiver: webhook
-      group_interval: 5m
-      group_wait: 30s
-      repeat_interval: 3h
-      group_by: [alertname]
-      routes:
-      - receiver: webhook
-        group_wait: 10s
-        match:
-          team: node
+      #group_interval: 5m
+      #group_wait: 30s
+      #repeat_interval: 3h
+      #group_by: [alertname]
+      #routes:
+      #- receiver: webhook
+      #  group_wait: 10s
+      #  match:
+      #    severity: critical|warning|error
+    receivers:
+    - name: webhook
+      email_configs:
+      - to: '250919938@qq.com'
+        send_resolved: true 
+
