--- a/k8s/study/prometheus-data/rules-configmap.yaml
+++ b/k8s/study/prometheus-data/rules-configmap.yaml
@@ -7,12 +7,12 @@ metadata:
     role: prometheus-rulefiles
     prometheus: k8s
 data:
-  prometheus.rules.yaml: |+
+  prometheus.rules.yml: |+
     groups:
     - name: noah_pod.rules
       rules:
       - alert: Pod_all_cpu_usage
-        expr: (sum by(name)(rate(container_cpu_usage_seconds_total{image!=""}[5m]))*100) > 10
+        expr: (sum by(name)(rate(container_cpu_usage_seconds_total{image!=""}[5m]))*100) > 0.1
         for: 5m
         labels:
           severity: critical
@@ -21,7 +21,7 @@ data:
           description: 容器 {{ $labels.name }} CPU 资源利用率大于 75% , (current value is {{ $value }})
           summary: Dev CPU 负载告警
       - alert: Pod_all_memory_usage
-        expr: sort_desc(avg by(name)(irate(container_memory_usage_bytes{name!=""}[5m]))*100) > 1024*10^3*2
+        expr: sort_desc(avg by(name)(irate(container_memory_usage_bytes{name!=""}[5m]))*100) > 1*10^3*2
         for: 10m
         labels:
           severity: critical
