--- a/k8s/study/volums/pod-pvc.yaml
+++ b/k8s/study/volums/pod-pvc.yaml
@@ -1,4 +1,16 @@
 apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mypvc
+  namespace: default
+spec:
+  accessModes: ["ReadWriteMany"]
+  resources:
+    requests:
+      storage: 1Gi
+  storageClassName: pv10
+---
+apiVersion: v1
 kind: Pod
 metadata:
   name: pod-vol-nfs
@@ -15,6 +27,6 @@ spec:
       containerPort: 80
   volumes:
   - name: html
-    nfs:
-      path: /data/nfs
-      server: 192.168.10.75
+    persistentVolumeClaim:
+      claimName: mypvc
+      
