--- a/docker-compose/nginx/etc/config/conf.d/default.conf
+++ b/docker-compose/nginx/etc/config/conf.d/default.conf
@@ -41,5 +41,13 @@ server {
     #location ~ /\.ht {
     #    deny  all;
     #}
+
+    #server {
+    #    listen       80  default_server;
+    #    server_name  _;
+    #    access_log   off;
+    #    return       444;
+    #}
+
 }
 
