--- a/docker-compose/nginx/docker-compose.yml
+++ b/docker-compose/nginx/docker-compose.yml
@@ -6,8 +6,10 @@ services:
     restart: always
     volumes:
       - ./etc/config/nginx.conf:/etc/nginx/nginx.conf
+      - ./etc/config/proxy_java.conf:/etc/nginx/proxy_java.conf
       - ./etc/config/conf.d:/etc/nginx/conf.d
       - ./etc/letsencrypt/:/etc/letsencrypt/
+      - ./html:/usr/share/nginx/html
       - ./logs/nginx:/var/log/nginx
     ports:
       - "80:80"
