--- a/docker-compose/nginx/etc/config/nginx.conf
+++ b/docker-compose/nginx/etc/config/nginx.conf
@@ -1,32 +1,55 @@
-
-user  nginx;
-worker_processes  1;
-
+user nginx;
+worker_processes  2;
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
-
+worker_rlimit_nofile 655350;
 events {
-    worker_connections  1024;
+    use epoll;
+    worker_connections 2048;
 }
-
-
 http {
-    include       /etc/nginx/mime.types;
+    include       mime.types;
     default_type  application/octet-stream;
+    sendfile        on;
+    keepalive_timeout  65;
+    access_log off;
+    #access_log  /var/log/nginx/access.log  main;
+    error_log /var/log/nginx/error.log notice;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+                     '"$http_user_agent" "$http_x_forwarded_for"$request_time"';
+    server_names_hash_bucket_size 128;
+    client_header_buffer_size 32k;
+    large_client_header_buffers 4 32k;
+    client_max_body_size 300m;
+    tcp_nopush      on;
+    server_tokens   off;
+    client_body_buffer_size 512k;
+    proxy_connect_timeout 60;
+    proxy_read_timeout    600;
+    proxy_send_timeout    600;
+    proxy_buffering off;
+    proxy_buffer_size     16k;
+    proxy_buffers         4 64k;
+    proxy_busy_buffers_size 128k;
+    proxy_temp_file_write_size 128k;
+    
+    gzip on;
+    gzip_min_length 1k;
+    gzip_buffers 4 16k;
+    gzip_http_version 1.1;
+    gzip_comp_level 2;
+    gzip_types text/plain application/x-javascript text/css application/xml;
+    gzip_vary   on;
+    limit_conn_zone $binary_remote_addr zone=perip:50m;
 
-    access_log  /var/log/nginx/access.log  main;
-
-    sendfile        on;
-    #tcp_nopush     on;
-
-    keepalive_timeout  65;
-
-    #gzip  on;
-
-    include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/conf.d/*.conf;  
+    server {
+        listen       80  default_server;
+        server_name  _;
+        access_log   off;
+        return       444;
+    }
 }
