--- a/dockerfile/vsftpd/docker-compose.yml
+++ b/dockerfile/vsftpd/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   vsftpd:
-    image: vsftp:v0.1
+    image: xiangys0134/vsftpd:v1.0.1
     restart: always
     container_name: vsftpd
     privileged: true
@@ -15,23 +15,23 @@ services:
           cpus: '0.25'
           memory: 20M
     networks:
-      app_net:
-        ipv4_address: 172.16.237.10
-        ipv6_address: 2001:3984:3989::10
+      - vsftpd_net
+        #ipv4_address: 172.16.237.10
+        #ipv6_address: 2001:3984:3989::10
     ports:
       - "20:20"
       - "21:21"
-      - "30000-30999:30000-30999"
+      - "30000-30099:30000-30099"
     volumes:
       - ./config/ftpuser.txtx:/etc/vsftpd/ftpuser.txtx
       - ./config/vsftpd.conf:/etc/vsftpd/vsftpd.conf
       - ./vuser_conf:/etc/vsftpd/vuser_conf
       - ./data:/data
 networks:
-  app_net:
-    ipam:
-      driver: default
-      config:
-        - subnet: "172.16.237.0/24"
-        - subnet: "2001:3984:3989::/64"
+  vsftpd_net:
+    #ipam:
+    #  driver: default
+    #  config:
+    #    - subnet: "172.16.237.0/24"
+    #    - subnet: "2001:3984:3989::/64"
 
