--- a/dockerfile/jenkins_agent/jenkins-docker/docker-compose.yml
+++ b/dockerfile/jenkins_agent/jenkins-docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   git-docker:
-    image: test:v0.1
+    image: docker:v0.1
     restart: always
     container_name: git-docker
     hostname: 'git-docker'
