--- a/dockerfile/devtoolset/Dockerfile
+++ b/dockerfile/devtoolset/Dockerfile
@@ -24,13 +24,11 @@ RUN localedef -v -c -i en_US -f UTF-8 zh_CN.UTF-8 >/dev/null 2>&1 &&\
     yum -y install --enablerepo=xunce-dev protobuf-3.6.1 &&\
     yum -y install --enablerepo=xunce-dev spdlog-1.1.0 &&\
     yum -y install --enablerepo=xunce-dev cmake-3.12.3 &&\
-    yum -y install --enablerepo=xunce-dev libuv-1.22.0 sqlite3-3.30.0 &&\
+    yum -y install --enablerepo=xunce-dev libuv-1.22.0 &&\
+    #yum -y install --enablerepo=xunce-dev sqlite3-3.30.0 &&\
+    #yum -y install lua-devel &&\
     yum-config-manager --enable rhel-server-rhscl-7-rpms && yum -y install devtoolset-7 &&\
     scl enable devtoolset-7 bash && echo "source /opt/rh/devtoolset-7/enable" >> /root/.bashrc && source /root/.bashrc &&\
-    #mkdir /tmp/Resources && cd /tmp/Resources && wget https://dist.libuv.org/dist/v1.9.1/libuv-v1.9.1.tar.gz &&\
-    #yum install -y automake libtool &&\
-    #tar zxf libuv-v1.9.1.tar.gz && cd libuv-v1.9.1 && ./autogen.sh &&\
-    #./configure --prefix=/usr && make && make install &&\
     mkdir /data && yum clean all
 
 USER root
