--- a/dockerfile/xc_devtool_xone/Dockerfile
+++ b/dockerfile/xc_devtool_xone/Dockerfile
@@ -17,13 +17,14 @@ RUN localedef -v -c -i en_US -f UTF-8 zh_CN.UTF-8 >/dev/null 2>&1 &&\
     yum-config-manager --add-repo  http://mirrors.xuncetech.com/xunce/xunce-dev/yum/el7/xunce-dev.repo &&\
     yum -y install http://rpms.famillecollet.com/enterprise/remi-release-7.rpm &&\
     yum install -y epel-relase ntp yum-plugin-fastestmirror vim-enhanced ntp wget bash-completion elinks lrzsz unix2dos dos2unix git \
-    wget sudo vim unix2dos dos2unix centos-release-scl git lua-devel libuv-devel libuuid-devel &&\
+    wget sudo vim unix2dos dos2unix centos-release-scl git lua-devel libuv-devel libuuid-devel mysql-devel &&\
     yum -y install --enablerepo=xunce-dev libzmq-4.2.1 \
-	                                      hiredis-0.14.0 \
-										  jsoncpp-1.8.0 \
-										  tinyxml2-7.0.0 \
-										  protobuf-3.6.1 \
-										  cmake-3.12.3 &&\
+	                                  hiredis-0.14.0 \
+					  jsoncpp-1.8.0 \
+                                          tinyxml2-7.0.0 \
+					  protobuf-3.6.1 \
+                                          xlslib-2.4.0 \
+                                          cmake-3.12.3 &&\
     yum-config-manager --enable rhel-server-rhscl-7-rpms && yum -y install devtoolset-7 &&\
     scl enable devtoolset-7 bash && echo "source /opt/rh/devtoolset-7/enable" >> /root/.bashrc && source /root/.bashrc &&\
     mkdir /data && yum clean all
