--- a/dockerfile/xc_devtool_xone/Dockerfile
+++ b/dockerfile/xc_devtool_xone/Dockerfile
@@ -24,6 +24,9 @@ RUN localedef -v -c -i en_US -f UTF-8 zh_CN.UTF-8 >/dev/null 2>&1 &&\
                                           tinyxml2-7.0.0 \
 					  protobuf-3.6.1 \
                                           xlslib-2.4.0 \
+                                          spdlog-1.1.0 \
+                                          uWebSockets-0.14.9 \
+                                          QuantLib-1.16 \
                                           cmake-3.12.3 &&\
     yum-config-manager --enable rhel-server-rhscl-7-rpms && yum -y install devtoolset-7 &&\
     scl enable devtoolset-7 bash && echo "source /opt/rh/devtoolset-7/enable" >> /root/.bashrc && source /root/.bashrc &&\
