--- a/dockerfile/xone_devtoolset_rpmbuild/Dockerfile
+++ b/dockerfile/xone_devtoolset_rpmbuild/Dockerfile
@@ -32,7 +32,7 @@ RUN localedef -v -c -i en_US -f UTF-8 zh_CN.UTF-8 >/dev/null 2>&1 &&\
     scl enable devtoolset-7 bash && echo "source /opt/rh/devtoolset-7/enable" >> /root/.bashrc && source /root/.bashrc &&\
     mkdir -p /data/rpmbuild/{BUILD,BUILDROOT,RPMS,SOURCES,SPECS,SRPMS} &&\
     sed -i '/^%_topdir/c%_topdir /data/rpmbuild' /usr/lib/rpm/macros &&\
-    mkdir /data && yum clean all
+    yum clean all
 
 USER root
 VOLUME ["/sys/fs/cgroup"]
